Fixing nested list css (caused overflow of nested paragraphs)

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -164,9 +164,9 @@ article.panel {
 
 .main-post {
     ul, ol {
-        li { list-style-position: outside; position: relative; left: 1.3em; }
+        li { list-style-position: outside; position: relative; margin-left: 1.3em; }
         // offset nested lists
-        ul { margin-left: 2em; }
+        ul { margin-left: 1.3em; }
     }
 }
 
